--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/abc.jpg" class="image"><img src="images/thumbs/abc.jpg" alt="" /></a>
+							<a href="images/fulls/1.jpg" class="image"><img src="images/thumbs/1.jpg" alt="" /></a>
 							<h2>1</h2>
 							<p>1.</p>
 						</article>
