--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/1.jpg" class="image"><img src="images/thumbs/1.jpg" alt="" /></a>
-							<h2>1</h2>
-							<p>1.</p>
+							<h2>이재호</h2>
+							<p>-편지로 전달예정-</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
