--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 							<p>-편지로 전달예정-</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>2</h2>
-							<p>2.</p>
+							<a href="images/fulls/2.jpg" class="image"><img src="images/thumbs/2.jpg" alt="" /></a>
+							<h2>박라온</h2>
+							<p>생일축하해 은서 오늘은 아무 생각없이 즐기면서 쉬어 생일축하한당</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
