--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 							<p>-편지로 전달예정-</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/2.jpg" class="image"><img src="images/thumbs/2.jpg" alt="" /></a>
-							<h2>박라온</h2>
-							<p>생일축하해 은서 오늘은 아무 생각없이 즐기면서 쉬어 생일축하한당</p>
+							<a href="images/fulls/3.jpg" class="image"><img src="images/thumbs/3.jpg" alt="" /></a>
+							<h2>아빠</h2>
+							<p>사랑하는 뚱이뚱이 막둥이 18번째 생일을 추카추카~아프지말고 건강하게만 자라거라~지금도 충분히 이뻐</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>3</h2>
-							<p>3.</p>
+							<h2>엄마</h2>
+							<p>울막둥이 착하고 반듯하게 잘 자라줘서 고맙고 기특해.그리고 사랑해~~</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
@@ -45,8 +45,8 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>6</h2>
-							<p>6</p>
+							<h2>윤서영</h2>
+							<p>음.. 너 개웃겨^3^</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
