--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<article class="thumb">
 							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
 							<h2>윤서영</h2>
-							<p>음.. 너 개웃겨^3^</p>
+							<p>사랑애~.~😉</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
