--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 							<p>울막둥이 착하고 반듯하게 잘 자라줘서 고맙고 기특해.그리고 사랑해~~</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>4</h2>
-							<p>4</p>
+							<a href="images/fulls/4.jpg" class="image"><img src="images/thumbs/4.jpg" alt="" /></a>
+							<h2>둘째언니</h2>
+							<p>덩생 생일축하해 아프지말고 시험공부땜에 너무 스트레스 받지말고 지금처럼 이쁘게만 자라렴 빅파이 생일축하해</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
