--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>5</h2>
-							<p>5</p>
+							<h2>큰언니</h2>
+							<p></p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
@@ -49,9 +49,9 @@
 							<p>사랑애~.~😉</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>7</h2>
-							<p>7</p>
+							<a href="images/fulls/2.jpg" class="image"><img src="images/thumbs/2.jpg" alt="" /></a>
+							<h2>박라온</h2>
+							<p>생일축하한다 내 유일하게 믿는 친구 근데 나 왤케 표정이 굳었냐</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
