--- a/index.html
+++ b/index.html
@@ -54,9 +54,43 @@
 							<p>생일축하한다 내 유일하게 믿는 친구 근데 나 왤케 표정이 굳었냐</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
+							<a href="images/fulls/08.mp4" class="video"><img src="images/thumbs/08.jpg" alt="" /></a>
 							<h2>8</h2>
-							<p>8</p>
+							<p>살어리랏다 살어리랏다 
+								청산에 살어리랏다
+								머루랑 다래랑 먹고 먹자 
+								청산에 살어리랏다네
+								[얄리 얄리 얄리 얄라성 
+								얄라리 얄리 얄라성
+								 얄리 얄리 얄리 얄라성 
+								얄라리 얄리 얄라성]
+								울어라 새여 울어라 
+								새여 자고서 울어라 새여
+								널 나와 씨름한 너도 나도 자고서 
+								우노라 운다네
+								가는 새 본다 가는 새 본다 물 
+								아래 가는 새 본다
+								잉무든 장글란 가지고 가고 
+								물 아래 가는 새 본다네
+								이링공 하야 뎌링공 하야 나즈란 
+								디내와 손뎌
+								오리도 가리도 없이 없고 
+								밤으란 또 어찌 하리라
+								어디라 돌코 더디던 돌코 누리라 
+								마치던 돌코
+								미리도 괴리도 없이 없어 
+								맞아서 우노나 운다네
+								
+								은서야 우리 유치원때부터 봤는데 
+								벌써 고등학생이네....
+								생일 축하하고 열심히 공부해서 
+								꼭 서울대 들어가....! 
+								나도 열심히 드럼쳐서 서울예대 갈게..
+								그래서 대학교 가서 만나면 바에 앉아 
+								술을 마시며 우리의 옛 추억들을 
+								 돌아보자..... 뭐라는겨....
+								-대전예술고등학교 2학년3반 31번
+								편입시험 수석합격자 김승헌-</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
