--- a/index.html
+++ b/index.html
@@ -54,63 +54,31 @@
 							<p>생일축하한다 내 유일하게 믿는 친구 근데 나 왤케 표정이 굳었냐</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.mp4" class="video"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>8</h2>
-							<p>살어리랏다 살어리랏다 
-								청산에 살어리랏다
-								머루랑 다래랑 먹고 먹자 
-								청산에 살어리랏다네
-								[얄리 얄리 얄리 얄라성 
-								얄라리 얄리 얄라성
-								 얄리 얄리 얄리 얄라성 
-								얄라리 얄리 얄라성]
-								울어라 새여 울어라 
-								새여 자고서 울어라 새여
-								널 나와 씨름한 너도 나도 자고서 
-								우노라 운다네
-								가는 새 본다 가는 새 본다 물 
-								아래 가는 새 본다
-								잉무든 장글란 가지고 가고 
-								물 아래 가는 새 본다네
-								이링공 하야 뎌링공 하야 나즈란 
-								디내와 손뎌
-								오리도 가리도 없이 없고 
-								밤으란 또 어찌 하리라
-								어디라 돌코 더디던 돌코 누리라 
-								마치던 돌코
-								미리도 괴리도 없이 없어 
-								맞아서 우노나 운다네
-								
-								은서야 우리 유치원때부터 봤는데 
-								벌써 고등학생이네....
-								생일 축하하고 열심히 공부해서 
-								꼭 서울대 들어가....! 
-								나도 열심히 드럼쳐서 서울예대 갈게..
-								그래서 대학교 가서 만나면 바에 앉아 
-								술을 마시며 우리의 옛 추억들을 
-								 돌아보자..... 뭐라는겨....
-								-대전예술고등학교 2학년3반 31번
-								편입시험 수석합격자 김승헌-</p>
+							<a href="images/fulls/08.mp4" class="video"><video src="images/thumbs/08.mp4" alt="" /></a>
+							<h2>김승헌</h2>
+							<p></p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>9</h2>
-							<p>9</p>
+							<h2>김가은</h2>
+							<p>은서야 일단 생일 너무너무 축하해!!
+								우리 학원 같이 다니면서 맨날 저녁도 많이 먹고 그랬었는데 이젠 거의 만나기가 쉽지 않고만.. 나랑도 놀아줘 ㅠ
+								너한테 고마운건 너무 많은데 항상 힘들때마다 너가 든든하게 있어주는거 같아서 조아 그리고 너가 나 귀엽다고 하는것도 좋아~~ 생일 추카하고 맛있는거 많이 먹어 사랑애 🤍🤍😍</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>10</h2>
-							<p>10</p>
+							<h2>노영대</h2>
+							<p>은서야 생일 축하한다!!! 나 때문에 고생 많이 하던 은서가 이제 재호형이라는 보팀목도 생겼으니까 나는 너무 좋다ㅋㅋㅋㅋㅋㅋ 아니 근데 너무 형식적인 말인거 같고 내 스타일 대로 할게 생일 진심 축하한다 나중에도 해줄게 그니까 잘해라 ㅋㅋ</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>11</h2>
-							<p>11</p>
+							<h2>박한솔,이준동</h2>
+							<p>한솔:은서야 생일 축하하고 맛있는거 많이 먹어<br>준동:앞으로 친하게 지내자 은서야 생일축하해</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>12</h2>
-							<p>12</p>
+							<a href="images/fulls/12.mp4" class="video"><video src="images/thumbs/12.mp4" alt="" /></a>
+							<h2>생일축하해 은서</h2>
+							<p></p>
 						</article>
 					</div>
 
